# xplane_fdr

./: .gitignore  CMakeLists.txt  get-dependencies.ps1  readme.md  win64_vs2022.bat
source/: main.cpp
